--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,14 @@ button:active{
     transform: scale(.9);
 }
 
+input{
+    background-color: #78ffc2;
+    box-shadow: inset 2px 2px 3px black;
+    border: none;
+    border-style: none;
+    border-radius: 4px;
+}
+
 .link{
     color: black;
     cursor: pointer;
