working on session, notes

--- a/src/Components/Forgot Password/ForgotPassword.css
+++ b/src/Components/Forgot Password/ForgotPassword.css
@@ -47,6 +47,8 @@
     width: 90%;
 }
 .field-container > .sub-field > button{
+    margin: 4%;
+    padding: 2%;
     font-size: 80%;
 }
 
@@ -65,6 +67,8 @@
 .fp-container-box > button{
     width: 40%;
     height: 6%;
+    margin: 4%;
+    padding: 2%;
     font-size: 80%;
 }
 
